File Input Button
Simple Form Submission that gets file from user and redirects to
www.google.com

--- a/homepage.html
+++ b/homepage.html
@@ -25,6 +25,10 @@
      <div>
      <input type="text" class="form-control" id="filePath">
 
+     <!-- Example of how to get files from users -->
+     <form action="http://www.google.com">
+     	<input type="file" name="datafile" size="40">
+     	<input type="submit" value="Send">
 
      </div>
 
