added two csv files to analyze

--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,7 @@
      </h1>
 
      <div>
-     <input type="text" class="form-control" id="filePath">
+     <input type="text" class="form-control" id="filePath" placeholder = "File Name goes here">
 
      <!-- Example of how to get files from users -->
      <form action="http://www.google.com">
