--- a/homepage.html
+++ b/homepage.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Election Aggregator Home</title>
+
+  <!-- JQuery Core JavaScript -->
+<script src="jquery.min.js"></script>
+
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -13,6 +17,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
+
 </head>
 
 
@@ -33,25 +38,10 @@
      </div>
 
      <!-- US Map Script -->
-     <iframe src="http://createaclickablemap.com/map.php?&id=55372&online=true" width="900" height="525" style="border: none;">
+     <iframe src="Blank_US_Map.svg" width="900" height="525" style="border: none;">
      </iframe>
-    <script>
-    if (window.addEventListener){ 
-      window.addEventListener("message", function(event) { 
-        if(event.data.length >= 22) { 
-          if( event.data.substr(0, 22) == "__MM-LOCATION.REDIRECT") location = event.data.substr(22); } 
-        }, 
-        false); 
-    } 
-    else if (window.attachEvent){ 
-      window.attachEvent("message", function(event) { 
-        if( event.data.length >= 22) { 
-          if ( event.data.substr(0, 22) == "__MM-LOCATION.REDIRECT") location = event.data.substr(22); 
-        } 
-      }, 
-      false); 
-    } 
-    </script>
+
+
 
 </body>
 </html>
