--- a/homepage.html
+++ b/homepage.html
@@ -38,8 +38,23 @@
      </div>
 
      <!-- US Map Script -->
-     <iframe src="Blank_US_Map.svg" width="900" height="525" style="border: none;">
-     </iframe>
+     <iframe src="http://createaclickablemap.com/map.php?&id=55376&online=true" width="900" height="525" style="border: none;"></iframe>
+     <script>
+      if (window.addEventListener){ 
+        window.addEventListener("message", function(event) { 
+          if(event.data.length >= 22) { 
+            if( event.data.substr(0, 22) == "__MM-LOCATION.REDIRECT") location = event.data.substr(22); 
+          } 
+        }, false); 
+      } 
+      else if (window.attachEvent){ 
+        window.attachEvent("message", function(event) { 
+          if( event.data.length >= 22) { 
+            if ( event.data.substr(0, 22) == "__MM-LOCATION.REDIRECT") location = event.data.substr(22); 
+          } 
+        }, false); 
+      } 
+    </script>
 
 
 
