--- a/homepage.html
+++ b/homepage.html
@@ -17,41 +17,25 @@
 
 
 <body>
-  
-     <h1 style = "text-align: center;">
+     <div>  
+          <h1 style = "text-align: center;">
           Election Data Aggregator
-     </h1>
+          </h1>
+
+          <h3>
+          Select a file to represent
+          </h3>
+     </div>
 
      <div>
+     <!-- 
      <input type="text" class="form-control" id="filePath" placeholder = "File Name goes here">
-
+     -->
      <!-- Example of how to get files from users -->
      <form action="http://www.google.com">
      	<input type="file" name="datafile" size="40">
-     	<input type="submit" value="Send">
-
+     	<input type="submit" value="Upload">
      </div>
-
-     <!-- US Map Script -->
-     <iframe src="http://createaclickablemap.com/map.php?&id=55372&online=true" width="900" height="525" style="border: none;">
-     </iframe>
-    <script>
-    if (window.addEventListener){ 
-      window.addEventListener("message", function(event) { 
-        if(event.data.length >= 22) { 
-          if( event.data.substr(0, 22) == "__MM-LOCATION.REDIRECT") location = event.data.substr(22); } 
-        }, 
-        false); 
-    } 
-    else if (window.attachEvent){ 
-      window.attachEvent("message", function(event) { 
-        if( event.data.length >= 22) { 
-          if ( event.data.substr(0, 22) == "__MM-LOCATION.REDIRECT") location = event.data.substr(22); 
-        } 
-      }, 
-      false); 
-    } 
-    </script>
-
 </body>
+
 </html>
