grabbed file selected

--- a/homepage.html
+++ b/homepage.html
@@ -6,6 +6,7 @@
 
   <!-- JQuery Core JavaScript -->
 <script src="jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -17,6 +18,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<script src = "simpleStuff.js"></script>
 
 </head>
 
@@ -32,15 +34,9 @@
           </h3>
      </div>
 
-     <div>
-     <!-- 
-     <input type="text" class="form-control" id="filePath" placeholder = "File Name goes here">
-     -->
-     <!-- Example of how to get files from users -->
-     <form action="http://www.google.com">
-     	<input type="file" name="datafile" size="40">
-     	<input type="submit" value="Upload">
-     </div>
+     <input type="file" id="input" value = "testFile2">
+     <input type="submit" value="Upload" onclick = "printFile()">
+
 </body>
 
 </html>
