--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,6 @@
   <title>Election Aggregator Home</title>
 
   <!-- JQuery Core JavaScript -->
-<script src="jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
   <!-- Latest compiled and minified CSS -->
@@ -17,7 +16,10 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+<!-- D3.js -->
 <script src="https://d3js.org/d3.v4.min.js"></script>
+
+
 <script src = "simpleStuff.js"></script>
 
 </head>
@@ -34,9 +36,30 @@
           </h3>
      </div>
 
-     <input type="file" id="input" value = "testFile2">
-     <input type="submit" value="Upload" onclick = "printFile()">
+     <input type="file" id="input" value = "testFile2" ng-bind='fileName'>
+     <input type="submit" value="Upload" onclick = "printFile()" data-toggle="modal" data-target="#displayType">
 
+
+
+      <div id="displayType" class="modal fade" role = "dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss = "modal">&times;</button><!-- close icon-->
+              </div>
+              <div class="modal-body" >
+              {{fileName}}
+              </div>
+              <div class="modal-footer" ng-controller= "similarArtistsCtrl">
+                <div>
+                  <br>
+                  <button type="button" class="btn btn-default" data-dismiss = "modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end of Modal-->
 </body>
 
 </html>
