added chart types, 'the angular way', some styling

--- a/homepage.html
+++ b/homepage.html
@@ -5,27 +5,32 @@
   <title>Election Aggregator Home</title>
 
   <!-- JQuery Core JavaScript -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+  <!-- AngularJS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+
+  <!-- D3.js -->
+  <script src="https://d3js.org/d3.v4.min.js"></script>
 
   <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<!-- D3.js -->
-<script src="https://d3js.org/d3.v4.min.js"></script>
+  <!-- The most swaggy JS file known to man -->
+  <script src="simpleStuff.js"></script>
 
-
-<script src = "simpleStuff.js"></script>
-
+  <!-- Custom CSS -->
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 
-<body>
+<body ng-app="DataAggApp">
      <div>  
           <h1 style = "text-align: center;">
           Election Data Aggregator
@@ -36,30 +41,72 @@
           </h3>
      </div>
 
-     <input type="file" id="input" value = "testFile2" ng-bind='fileName'>
-     <input type="submit" value="Upload" onclick = "printFile()" data-toggle="modal" data-target="#displayType">
+  <div class="container" ng-controller="DataImportCtrl">
+       <input type="file" id="input" value = "testFile2" ng-model="fileName" ng-init="">
+       <input type="submit" value="Upload" ng-click = "readFile()" data-toggle="modal" data-target="#buttonModal">
 
-
-
-      <div id="displayType" class="modal fade" role = "dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss = "modal">&times;</button><!-- close icon-->
-              </div>
-              <div class="modal-body" >
-              {{fileName}}
-              </div>
-              <div class="modal-footer" ng-controller= "similarArtistsCtrl">
-                <div>
+        <div id="buttonModal" class="modal fade" role = "dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss = "modal">&times;</button><!-- close icon-->
+                </div>
+                <div class="modal-body">
+                  <h3>Chart Type</h3>
+                  File: {{fileName}}
+                  <hr>
+                  <div class = "row">
+                    <div class = "col-lg-12 col-md-12 col-sm-12">
+                      <button type="button" class="btn btn-primary btn-lg btn-chart-type" ng-click="chartTypeBtn('Pie')" data-dismiss="modal">Pie</button>
+                      <button type="button" class="btn btn-primary btn-lg btn-chart-type" ng-click="chartTypeBtn('Bar')" data-dismiss="modal">Bar</button>
+                      <button type="button" class="btn btn-primary btn-lg btn-chart-type" ng-click="chartTypeBtn('Line')" data-dismiss="modal">Line</button>
+                    </div>
+                  </div>
                   <br>
-                  <button type="button" class="btn btn-default" data-dismiss = "modal">Close</button>
+                  <div class = "row">
+                    <div class = "col-lg-12 col-md-12 col-sm-12">
+                      <button type="button" class="btn btn-primary btn-lg btn-chart-type" ng-click="chartTypeBtn('Scatter')" data-dismiss="modal">Scatter</button>
+                      <button type="button" class="btn btn-primary btn-lg btn-chart-type" ng-click="chartTypeBtn('Histogram')" data-dismiss="modal">Histogram</button>
+                      <button type="button" class="btn btn-primary btn-lg btn-chart-type" ng-click="chartTypeBtn('Map')" data-dismiss="modal">Map</button>
+                    </div>
+                  </div>
+                  
+                  
+                </div>
+                <div class="modal-footer">
+                  <div>
+                    <br>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+          <!-- end of Modal-->
+
+          <div id="confirmModal" class="modal fade" role = "dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss = "modal">&times;</button><!-- close icon-->
+                </div>
+                <div class="modal-body" >
+                <h3>Confirm Screen</h3>
+                File: {{fileName}}
+                Chart Type: {{chartType}}
+                <hr>
+                </div>
+                <div class="modal-footer">
+                  <div>
+                    <br>
+                    <button type="button" class="btn btn-default" data-dismiss = "modal">Confirm</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- end of Modal-->
         </div>
-        <!-- end of Modal-->
 </body>
 
 </html>
