--- a/pie_graph.html
+++ b/pie_graph.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<head>
+<script src = "simpleStuff.js"></script>
+</head>
+
 <style>
 
 .arc text {
@@ -13,8 +17,19 @@
 
 </style>
 <body>
+
+<input type="text" id="mytext">
+
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
+makePie();
+</script>
+
+<!--
+<script>
+
+var fileName = "";
+fileName = document.getElementById("mytext").value;
 
 var width = 960,
     height = 500,
@@ -42,6 +57,7 @@ var svg = d3.select("body").append("svg")
     .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
 d3.csv("pie_data.csv", type, function(error, data) {
+//d3.csv(fileName, type, function(error, data) {
   if (error) throw error;
 
   var g = svg.selectAll(".arc")
@@ -58,6 +74,7 @@ d3.csv("pie_data.csv", type, function(error, data) {
       .attr("dy", ".35em")
       .text(function(d) { return d.data.age; });
 });
+-->
 
 function type(d) {
   d.population = +d.population;
