--- a/test-d3.html
+++ b/test-d3.html
@@ -17,7 +17,7 @@
           height = 270 - margin.top - margin.bottom;
 
       // Parse the date / time
-      // var parseDate = d3.time.format("%d-%b-%y").parse;
+      var parseDate = d3.time.format("%d-%b-%y").parse;
 
       // Set the ranges
       var x = d3.time.scale().range([0, width]);
@@ -45,7 +45,7 @@
                     "translate(" + margin.left + "," + margin.top + ")");
 
       // Get the data
-      var csv = d3.csv("data.csv", function(error, data) {
+      d3.csv("data.csv", function(error, data) {
           data.forEach(function(d) {
               d.date = parseDate(d.date);
               d.close = +d.close;
