--- a/pie_graph.html
+++ b/pie_graph.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <head>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <script src = "simpleStuff.js"></script>
 </head>
 
@@ -17,14 +18,8 @@
 
 </style>
 <body>
-
 <input type="text" id="mytext">
-
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script>
-makePie();
-</script>
-
+<button onclick="makePie()">Type the name of your file and then click me</button>
 <!--
 <script>
 
@@ -74,7 +69,6 @@ d3.csv("pie_data.csv", type, function(error, data) {
       .attr("dy", ".35em")
       .text(function(d) { return d.data.age; });
 });
--->
 
 function type(d) {
   d.population = +d.population;
@@ -82,3 +76,5 @@ function type(d) {
 }
 
 </script>
+
+-->
