--- a/homepage.html
+++ b/homepage.html
@@ -105,7 +105,7 @@
                 <div class="modal-footer">
                   <div>
                     <br>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="modal" data-target="#ySelectModal">Next</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="xSelBtn()">Next</button>
                   </div>
                 </div>
               </div>
@@ -133,7 +133,7 @@
                 <div class="modal-footer">
                   <div>
                     <br>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="modal" data-target="#confirmModal">Next</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="ySelBtn()">Next</button>
                   </div>
                 </div>
               </div>
