--- a/pie_graph.html
+++ b/pie_graph.html
@@ -1,83 +1,25 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <head>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src = "pie_graph.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src = "pie_graph.js"></script>
 </head>
 
 <style>
+  .arc text {
+    font: 10px sans-serif;
+    text-anchor: middle;
+  }
 
-.arc text {
-  font: 10px sans-serif;
-  text-anchor: middle;
-}
-
-.arc path {
-  stroke: #fff;
-}
-
+  .arc path {
+    stroke: #fff;
+  }
 </style>
+
 <body>
-<input type="text" placeholder="filename.csv" id="mytext">
-<input type="text" placeholder="CategoryName" id="categoryName">
-<input type="text" placeholder="CategoryValue" id="categoryValue">
+  <input type="text" placeholder="filename.csv" id="mytext">
+  <input type="text" placeholder="CategoryName" id="categoryName">
+  <input type="text" placeholder="CategoryValue" id="categoryValue">
 
-<button onclick="makePie()">Type the name of your file and then click me</button>
-<!--
-<script>
-
-var fileName = "";
-fileName = document.getElementById("mytext").value;
-
-var width = 960,
-    height = 500,
-    radius = Math.min(width, height) / 2;
-
-var color = d3.scale.ordinal()
-    .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
-
-var arc = d3.svg.arc()
-    .outerRadius(radius - 10)
-    .innerRadius(0);
-
-var labelArc = d3.svg.arc()
-    .outerRadius(radius - 40)
-    .innerRadius(radius - 40);
-
-var pie = d3.layout.pie()
-    .sort(null)
-    .value(function(d) { return d.population; });
-
-var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height)
-  .append("g")
-    .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
-
-d3.csv("pie_data.csv", type, function(error, data) {
-//d3.csv(fileName, type, function(error, data) {
-  if (error) throw error;
-
-  var g = svg.selectAll(".arc")
-      .data(pie(data))
-    .enter().append("g")
-      .attr("class", "arc");
-
-  g.append("path")
-      .attr("d", arc)
-      .style("fill", function(d) { return color(d.data.age); });
-
-  g.append("text")
-      .attr("transform", function(d) { return "translate(" + labelArc.centroid(d) + ")"; })
-      .attr("dy", ".35em")
-      .text(function(d) { return d.data.age; });
-});
-
-function type(d) {
-  d.population = +d.population;
-  return d;
-}
-
-</script>
-
--->
+  <button onclick="makePie()">Type the name of your file and then click me</button>
+</body>
