--- a/homepage.html
+++ b/homepage.html
@@ -83,7 +83,7 @@
 
           <div id="xSelectModal" class="modal fade" role = "dialog">
             <div class="modal-dialog">
-              <div class="modal-content">
+              <div class="modal-content" id="categories">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss = "modal">&times;</button><!-- close icon-->
                 </div>
@@ -112,7 +112,7 @@
 
           <div id="ySelectModal" class="modal fade" role = "dialog">
             <div class="modal-dialog">
-              <div class="modal-content">
+              <div class="modal-content" id="categories">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss = "modal">&times;</button><!-- close icon-->
                 </div>
@@ -179,11 +179,7 @@
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss = "modal">&times;</button><!-- close icon-->
                 </div>
-                <div class="modal-body" >
-                <h3 align="center">Here's Your Data!</h3>
-                <h5>File: {{fileName}}</h5>
-                <h5>Chart Type: {{chartType}}</h5>
-                <hr>
+                <div class="modal-body" id="graph">
 
                 </div>
                 <div class="modal-footer">
