--- a/homepage.html
+++ b/homepage.html
@@ -53,22 +53,12 @@
               <h5>File: {{fileName}}</h5>
               <hr>
               <div class = "row">
-                <div class = "col-lg-12 col-md-12 col-sm-12">
+                <div class="col-lg-12 col-md-12 col-sm-12" align="center">
                   <button type="button" class="btn btn-primary btn-lg btn-chart-type" ng-click="chartTypeBtn('Pie')" data-dismiss="modal">Pie</button>
                   <button type="button" class="btn btn-primary btn-lg btn-chart-type" ng-click="chartTypeBtn('Bar')" data-dismiss="modal">Bar</button>
-                  <button type="button" class="btn btn-primary btn-lg btn-chart-type" ng-click="chartTypeBtn('Line')" data-dismiss="modal">Line</button>
-                </div>
-              </div>
-              <br>
-              <div class = "row">
-                <div class = "col-lg-12 col-md-12 col-sm-12">
                   <button type="button" class="btn btn-primary btn-lg btn-chart-type" ng-click="chartTypeBtn('Scatter')" data-dismiss="modal">Scatter</button>
-                  <button type="button" class="btn btn-primary btn-lg btn-chart-type" ng-click="chartTypeBtn('Histogram')" data-dismiss="modal">Histogram</button>
-                  <button type="button" class="btn btn-primary btn-lg btn-chart-type" ng-click="chartTypeBtn('Map')" data-dismiss="modal">Map</button>
                 </div>
-              </div>
-              
-              
+              </div> 
             </div>
             <div class="modal-footer">
               <div>
@@ -83,11 +73,11 @@
 
           <div id="xSelectModal" class="modal fade" role = "dialog">
             <div class="modal-dialog">
-              <div class="modal-content" id="categories">
+              <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss = "modal">&times;</button><!-- close icon-->
                 </div>
-                <div class="modal-body" >
+                <div class="modal-body" class="categories">
                 <h3 align="center">Select Category Columns</h3>
                 <h5>File: {{fileName}}</h5>
                 <h5>Chart Type: {{chartType}}</h5>
@@ -116,7 +106,7 @@
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss = "modal">&times;</button><!-- close icon-->
                 </div>
-                <div class="modal-body" >
+                <div class="modal-body" class="categories">
                 <h3 align="center">Selected Value Columns</h3>
                 <h5>File: {{fileName}}</h5>
                 <h5>Chart Type: {{chartType}}</h5>
@@ -172,15 +162,15 @@
           </div>
           <!-- end of Confirm Selection Modal-->
 
-          <!-- TODO: Might scrap this??-->
           <div id="visualModal" class="modal fade" role = "dialog">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <button type="button" class="close" data-dismiss = "modal">&times;</button><!-- close icon-->
                 </div>
                 <div class="modal-body" id="graph">
-
+                <h3 align="center">Enjoy Your Data!</h3>
+                <hr>
+                <!-- Graph goes here-->
                 </div>
                 <div class="modal-footer">
                   <div>
