--- a/homepage.html
+++ b/homepage.html
@@ -115,7 +115,7 @@
                   <hr>
                   <div class="categories-box">
                     <h5>Select data field:</h5>
-                    <div ng-repeat="col in postFilteredCols">
+                    <div ng-repeat="col in dispYCols">
                       <input type="checkbox" checklist-model="user.ycols" checklist-value="col"> {{col}}
                     <br>
                   </div>
@@ -133,6 +133,37 @@
           </div>
           <!-- end of Column Y-Selection Modal-->
 
+          <div id="legendSelectModal" class="modal fade" role = "dialog">
+            <div class="modal-dialog">
+              <div class="modal-content" class="categories">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss = "modal">&times;</button><!-- close icon-->
+                </div>
+                <div class="modal-body">
+                  <h3 align="center">Selected Legend Column</h3>
+                  <h5>File: {{fileName}}</h5>
+                  <h5>Chart Type: {{chartType}}</h5>
+                  <hr>
+                  <div class="categories-box">
+                    <h5>Select data field:</h5>
+                    <div ng-repeat="col in dispLegendCols">
+                      <input type="checkbox" checklist-model="user.legendcol" checklist-value="col"> {{col}}
+                    <br>
+                  </div>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <div>
+                    <br>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="modal" data-target="#ySelectModal">Back</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="legendSelBtn()">Next</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- end of Column Legend-Selection Modal-->
+
           <div id="confirmModal" class="modal fade" role = "dialog">
             <div class="modal-dialog">
               <div class="modal-content">
@@ -140,19 +171,23 @@
                   <button type="button" class="close" data-dismiss = "modal">&times;</button><!-- close icon-->
                 </div>
                 <div class="modal-body" >
-                <h3 align="center">Confirm</h3>
-                <h5>File: {{fileName}}</h5>
-                <h5>Chart Type: {{chartType}}</h5>
-                <hr>
-                <h5>Columns selected:</h5>
-                <div ng-repeat="col in user.xcols">
-                  xcols: {{col}}
-                <br>
-                </div>
-                <div ng-repeat="col in user.ycols">
-                  ycols: {{col}}
-                <br>
-                </div>
+                  <h3 align="center">Confirm</h3>
+                  <h5>File: {{fileName}}</h5>
+                  <h5>Chart Type: {{chartType}}</h5>
+                  <hr>
+                  <h5>Columns selected:</h5>
+                  <div ng-repeat="col in user.xcols">
+                    Category Column Selected: {{col}}
+                  <br>
+                  </div>
+                  <div ng-repeat="col in user.ycols">
+                    Category Value Selected: {{col}}
+                  <br>
+                  </div>
+                  <div ng-repeat="col in user.legendcol">
+                    Category Legend Selected: {{col}}
+                  <br>
+                  </div>
                 </div>
                 <div class="modal-footer">
                   <div>
@@ -172,8 +207,6 @@
                 <div class="modal-header">
                 </div>
                 <div class="modal-body" id="graph">
-                <h3 align="center">Enjoy Your Data!</h3>
-                <hr>
                 <!-- Graph goes here-->
                 </div>
                 <div class="modal-footer">
