--- a/homepage.html
+++ b/homepage.html
@@ -192,7 +192,7 @@
                 <div class="modal-footer">
                   <div>
                     <br>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="modal" data-target="#ySelectModal">Back</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="confirmBackBtn()">Back</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="create_graph(chartType)">Generate Visual!</button>
                   </div>
                 </div>
